# erc-software

./: .git-town.toml  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  colcon_defaults.yaml  compose.yaml  hx.toml
control_ert_rtw/: buildInfo.mat  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  control.h  control.mk  ert_main.c  rtw_proj.tmw  rtwtypes.h  rtwtypeschksum.mat
control_ert_rtw/tmwinternal/: tr
docs/: .gitignore  erc.tji  events.tji  landing.tji  leaves.tji  project-bookings.tji  project-header.tji  project.tjp  reports.tji  resources.tji  rfid.tji  vacations.tji
docs/TimeSheetTemplates/: acceptable_intervals
docs/TimeSheetTemplates/2025-09-08/: amr_2025-09-08.tji  andrei_2025-09-08.tji  candela_2025-09-08.tji  dmytro_2025-09-08.tji  ege_2025-09-08.tji  erik_2025-09-08.tji  ernesto_2025-09-08.tji  irem_2025-09-08.tji  janos_2025-09-08.tji  jaron_2025-09-08.tji  lisa_2025-09-08.tji  ludwig_2025-09-08.tji  mariam_2025-09-08.tji  marijn_2025-09-08.tji  mohammed_2025-09-08.tji  myrto_2025-09-08.tji  (+8 more)
docs/TimeSheets/: all.tji
docs/timesheets/: 2025-11-26-dmytro.tji
nix/repo/: shells.nix
slprj/_jitprj/: jitEngineAccessInfo.mat  sKrkWlnb8rKxdbXhb2yivUH.l  sKrkWlnb8rKxdbXhb2yivUH.mat  sTMmyPBk7WyAeU3Tmr9KjPE.l  sTMmyPBk7WyAeU3Tmr9KjPE.mat  sce2mb8eYayTFce9nBK1fFB.l  sce2mb8eYayTFce9nBK1fFB.mat  sl4mXBlBEIkYtI9Q3H95K7D.l  sl4mXBlBEIkYtI9Q3H95K7D.mat  ss9K84LoskvVGHhGqpp0nLH.l  ss9K84LoskvVGHhGqpp0nLH.mat
src/: codegen.slxc
src/aruco_detection/: .gitignore  DetectAruco.cpp
src/aruco_track/: package.xml
src/control_ert_rtw/: buildInfo.mat  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  control.mk  ert_main.c  rtwtypeschksum.mat
src/hi_world/: CMakeLists.txt  package.xml  sim.rviz
src/rtt_rover_control/: CMakeLists.txt  package.xml
src/rtt_rover_control/include/: control.h  rtwtypes.h
src/rtt_rover_control/include/rtt_rover_control/: rtt_rover_control.hpp  visibility_control.h
src/rtt_rover_control/src/: control.c  rtt_rover_control.cpp
src/simulation/: package.xml
(+319 files in other folders)
